--- a/pom.xml
+++ b/pom.xml
@@ -32,12 +32,16 @@
 
     <properties>
         <maven.compiler.release>17</maven.compiler.release>
-
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <fusion.version>1.0.2</fusion.version>
-        <junit-jupiter.version>5.9.1</junit-jupiter.version>
+        <fusion.version>1.0.7</fusion.version>
+        <yupiik-logging.version>1.0.7</yupiik-logging.version>
+        <junit-jupiter.version>5.10.0-RC2</junit-jupiter.version>
     </properties>
+
+    <modules>
+        <module>rest-api</module>
+    </modules>
 
     <build>
         <plugins>
