--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright (c) 2022-2023 - Yupiik SAS - https://www.yupiik.com
+    Copyright (c) 2022-present - Yupiik SAS - https://www.yupiik.com
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance
     with the License.  You may obtain a copy of the License at
@@ -32,19 +32,38 @@
 
     <properties>
         <maven.compiler.release>17</maven.compiler.release>
+        <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <fusion.version>1.0.7</fusion.version>
+        <fusion.version>1.0.14</fusion.version>
+
         <yupiik-logging.version>1.0.7</yupiik-logging.version>
         <junit-jupiter.version>5.10.0-RC2</junit-jupiter.version>
+
+        <yupiik.tools.version>1.2.1-SNAPSHOT</yupiik.tools.version>
+        <yupiik.bundlebee.version>1.0.25</yupiik.bundlebee.version>
     </properties>
 
     <modules>
-        <module>rest-api</module>
+        <module>app-backend</module>
+        <module>app-documentation</module>
+        <module>app-deployment</module>
     </modules>
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.12.1</version>
+                <configuration>
+                    <release>${maven.compiler.release}</release>
+                    <source>${maven.compiler.release}</source>
+                    <target>${maven.compiler.release}</target>
+                    <parameters>true</parameters>
+                    <fork>false</fork>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>com.mycila</groupId>
                 <artifactId>license-maven-plugin</artifactId>
@@ -159,5 +178,5 @@ under the License.
         <url>https://www.yupiik.com</url>
     </organization>
 
-    <inceptionYear>2022-2023</inceptionYear>
+    <inceptionYear>2022-present</inceptionYear>
 </project>
