--- a/pom.xml
+++ b/pom.xml
@@ -35,13 +35,13 @@
         <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <fusion.version>1.0.14</fusion.version>
+        <fusion.version>1.0.16</fusion.version>
 
         <yupiik-logging.version>1.0.7</yupiik-logging.version>
-        <junit-jupiter.version>5.10.0-RC2</junit-jupiter.version>
+        <junit-jupiter.version>5.10.2</junit-jupiter.version>
 
-        <yupiik.tools.version>1.2.1-SNAPSHOT</yupiik.tools.version>
-        <yupiik.bundlebee.version>1.0.25</yupiik.bundlebee.version>
+        <yupiik.tools.version>1.2.1</yupiik.tools.version>
+        <yupiik.bundlebee.version>1.0.26</yupiik.bundlebee.version>
     </properties>
 
     <modules>
