simplify and decouple tests

--- a/app-backend/pom.xml
+++ b/app-backend/pom.xml
@@ -91,6 +91,12 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>io.yupiik.fusion</groupId>
+            <artifactId>fusion-httpclient</artifactId>
+            <version>${fusion.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
             <version>${junit-jupiter.version}</version>
