--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,7 +27,7 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: Clone
-        uses: actions/checkout@v1
+        uses: actions/checkout@v4.1.1
       - name: Cache Maven Repository
         uses: actions/cache@v2
         with:
@@ -35,9 +35,10 @@ jobs:
             /home/runner/work/fusion/fusion/.m2
           key: m2_repository
       - name: Set up JDK
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v4.2.1
         with:
-          java-version: '17.0.7'
+          distribution: 'zulu'
+          java-version: '21'
       - name: Build
         run: mvn install -Dm2.location=/home/runner/work/fusion-examples/fusion-examples/.m2
       - name: Remove Snapshots Before Caching
@@ -47,16 +48,17 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: Clone
-        uses: actions/checkout@v1
+        uses: actions/checkout@v4.1.1
       - name: Cache Maven Repository
         uses: actions/cache@v1
         with:
           path: /home/runner/work/fusion-examples/fusion-examples/.m2
           key: m2_repository
       - name: Set up JDK
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v4.2.1
         with:
-          java-version: '17.0.7'
+          distribution: 'zulu'
+          java-version: '21'
       - name: Build
         run: mvn install -DskipTests ossindex:audit
       - name: Remove Snapshots Before Caching
