--- a/app-deployment/bundlebee/kubernetes/server/backend/configmap.json
+++ b/app-deployment/bundlebee/kubernetes/server/backend/configmap.json
@@ -2,26 +2,25 @@
   "apiVersion":"v1",
   "kind":"ConfigMap",
   "metadata":{
-    "name":"metric-relay",
+    "name":"backend",
     "namespace": "{{namespace.name}}",
     "labels":{
-      "app.kubernetes.io/name": "metric-relay",
-      "app.kubernetes.io/instance": "metric-relay",
+      "app.kubernetes.io/name": "backend",
+      "app.kubernetes.io/instance": "backend",
       "app.kubernetes.io/version": "{{service.version}}",
-      "app.kubernetes.io/component": "metric-relay",
-      "app.kubernetes.io/part-of": "observability",
+      "app.kubernetes.io/component": "backend",
+      "app.kubernetes.io/part-of": "fusion",
       "app.kubernetes.io/managed-by": "bundlebee",
       "deploy.by":"{{user.name:-unknown}}",
-      "deploy.at":"{{observability.deploytime:-unset}}"
+      "deploy.at":"{{app.deploytime:-unset}}"
     },
     "annotations": {
-      "observability.instance.goal": "metric relay",
       "io.yupiik.bundlebee/putOnUpdate": "true"
     }
   },
   "data": {
-    "APPLICATION_ENVIRONMENT":"{{observability.environment:-development}}",
-    "_DEPLOY_TIME":"{{observability.deploytime:-unset}}",
+    "APPLICATION_ENVIRONMENT":"{{app.environment:-development}}",
+    "_DEPLOY_TIME":"{{app.deploytime:-unset}}",
     "_JAVA_OPTIONS": "-XX:+ExitOnOutOfMemoryError -XX:MaxRAMPercentage=75 -Djdk.httpclient.keepalive.timeout=30 -Dsun.net.inetaddr.ttl=30"
   }
 }
