--- a/app-deployment/bundlebee/manifest.json
+++ b/app-deployment/bundlebee/manifest.json
@@ -48,7 +48,43 @@
         {
           "name": "_namespace"
         }
-      ]
+      ],
+      "placeholders": {
+        "namespace.name": "fusion"
+      }
+    },
+    {
+      "name": "observability-namespace",
+      "version": "{{project.version}}",
+      "dependencies": [
+        {
+          "name": "_namespace"
+        }
+      ],
+      "placeholders": {
+        "namespace.name": "observability"
+      }
+    },
+    {
+      "name": "backend",
+      "version": "{{project.version}}",
+      "descriptors": [
+        {
+          "name": "server/backend/configmap.json"
+        }
+      ],
+      "dependencies": [
+        {
+          "name": "_app"
+        }
+      ],
+      "placeholders": {
+        "service.name": "backend",
+        "service.component": "backend",
+        "service.version": "{{project.version}}",
+        "service.image.name": "fusion/examples/backend",
+        "service.image.version": "{{project.version}}"
+      }
     },
     {
       "name": "app",
@@ -56,6 +92,37 @@
       "dependencies": [
         {
           "name": "app-namespace"
+        },
+        {
+          "name": "backend"
+        }
+      ]
+    },
+    {
+      "name": "observability",
+      "chainDependencies": true,
+      "dependencies": [
+        {
+          "name": "observability-namespace"
+        },
+        {
+          "name": "io.yupiik.alveoli:monitoring-alveolus:{{yupiik.bundlebee.version}}",
+          "location": "io.yupiik.alveoli:monitoring-alveolus:{{yupiik.bundlebee.version}}"
+        }
+      ],
+      "placeholders": {
+        "monitoring.namespace": "observability",
+        "observability.deploytime": "{{app.deploytime}}"
+      }
+    },
+    {
+      "name": "all-in-one",
+      "dependencies": [
+        {
+          "name": "observability"
+        },
+        {
+          "name": "app"
         }
       ]
     }
