--- a/app-deployment/bundlebee/placeholders.properties
+++ b/app-deployment/bundlebee/placeholders.properties
@@ -14,4 +14,5 @@
 # under the License.
 #
 
-#
+# wire default alveolus var to a pom variable
+monitoring.namespace = {{observability.namespace.name}}
