--- a/app-deployment/bundlebee/descriptions.properties
+++ b/app-deployment/bundlebee/descriptions.properties
@@ -16,10 +16,11 @@
 
 app.deploytime = Deployment time label.
 app.environment = Environment label.
+app.namespace.name = Namespace for the application (`backend`)
 
 yupiik.bundlebee.version = BundleBee version (default alveoli version) - injected from the pom.xml version if not overriden.
 
-# observability
+# observability - dependency (not hardcoded props in manifest.json)
 grafana-simple.image = The image to use for Grafana.
 grafana-simple.resources.limits.cpu = The resource limits cpu for grafana.
 grafana-simple.resources.limits.memory = The resource limits memory for Grafana.
