--- a/app-deployment/bundlebee/placeholders.properties
+++ b/app-deployment/bundlebee/placeholders.properties
@@ -14,5 +14,11 @@
 # under the License.
 #
 
+app.environment = JUG
+
 # wire default alveolus var to a pom variable
 monitoring.namespace = {{observability.namespace.name}}
+prometheus-simple.resources.limits.cpu = null
+prometheus-simple.resources.limits.memory = 512Mi
+prometheus-simple.resources.requests.cpu = 1
+prometheus-simple.resources.requests.memory = 512Mi
