--- a/app-deployment/bundlebee/kubernetes/server/backend/configmap.json
+++ b/app-deployment/bundlebee/kubernetes/server/backend/configmap.json
@@ -19,8 +19,11 @@
     }
   },
   "data": {
-    "APPLICATION_ENVIRONMENT":"{{app.environment:-development}}",
     "_DEPLOY_TIME":"{{app.deploytime:-unset}}",
-    "_JAVA_OPTIONS": "-XX:+ExitOnOutOfMemoryError -XX:MaxRAMPercentage=75 -Djdk.httpclient.keepalive.timeout=30 -Dsun.net.inetaddr.ttl=30 -Dio.yupiik.logging.jul.handler.StandardHandler.formatter=json"
+    "_JAVA_OPTIONS": "-XX:+ExitOnOutOfMemoryError -XX:MaxRAMPercentage=75 -Djdk.httpclient.keepalive.timeout=30 -Dsun.net.inetaddr.ttl=30 -Dio.yupiik.logging.jul.handler.StandardHandler.formatter=json",
+
+    "APPLICATION_ENVIRONMENT":"{{app.environment:-development}}",
+
+    "BACKEND_ZIPKIN": "http://zipkin.observability.svc.cluster.local:9411/api/v2/spans"
   }
 }
