Fix metric server and add documentation readme helper

--- a/app-deployment/bundlebee/descriptions.properties
+++ b/app-deployment/bundlebee/descriptions.properties
@@ -17,6 +17,7 @@
 app.deploytime = Deployment time label.
 app.environment = Environment label.
 app.namespace.name = Namespace for the application (`backend`)
+app.node.port = Node port of the application
 
 yupiik.bundlebee.version = BundleBee version (default alveoli version) - injected from the pom.xml version if not overriden.
 
