Update config deployment

--- a/app-backend/pom.xml
+++ b/app-backend/pom.xml
@@ -126,7 +126,6 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>${h2.version}</version>
-            <scope>test</scope>
         </dependency>
     </dependencies>
 
@@ -197,7 +196,6 @@
                         <java.net.preferIPv4Stack>true</java.net.preferIPv4Stack>
                         <fusion.http-server.port>0</fusion.http-server.port>
                         <fusion.observability.server.port>0</fusion.observability.server.port>
-                        <fusion.persistence.contextLess>true</fusion.persistence.contextLess>
                         <fusion.persistence.datasource.url>jdbc:h2:mem:fusion;mode=PostgreSQL;INIT=runscript from '../src/database/fusion-dump.sql'</fusion.persistence.datasource.url>
                         <fusion.persistence.datasource.username>sa</fusion.persistence.datasource.username>
                         <fusion.persistence.datasource.driver>org.h2.Driver</fusion.persistence.datasource.driver>
@@ -248,6 +246,21 @@
                             <com.meecrogate.cmd>docker run ${image.name} &lt;args&gt;</com.meecrogate.cmd>
                         </labels>
                     </container>
+                    <extraDirectories>
+                        <paths>
+                            <path>
+                                <from>${project.parent.basedir}/src/database</from>
+                                <into>/opt/yupiik/fusion/database</into>
+                                <includes>fusion-dump.sql</includes>
+                            </path>
+                        </paths>
+                        <permissions>
+                            <permission>
+                                <file>/opt/yupiik/fusion/database/fusion-dump.sql</file>
+                                <mode>644</mode>
+                            </permission>
+                        </permissions>
+                    </extraDirectories>
                 </configuration>
             </plugin>
         </plugins>
