--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -40,7 +40,7 @@ jobs:
           distribution: 'zulu'
           java-version: '21'
       - name: Build
-        run: mvn install -Dm2.location=/home/runner/work/fusion-examples/fusion-examples/.m2 -Dbundlebee.placeholder-extract.skip=true
+        run: mvn install -Dm2.location=/home/runner/work/fusion-examples/fusion-examples/.m2 -e
       - name: Remove Snapshots Before Caching
         run: find /home/runner/work/fusion/fusion/.m2 -name '*SNAPSHOT' | xargs rm -Rf
   security_audit:
@@ -60,6 +60,6 @@ jobs:
           distribution: 'zulu'
           java-version: '21'
       - name: Build
-        run: mvn install ossindex:audit -DskipTests -e
+        run: mvn install ossindex:audit -DskipTests
       - name: Remove Snapshots Before Caching
         run: find /home/runner/work/fusion/fusion/.m2 -name '*SNAPSHOT' | xargs rm -Rf
