--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,7 +19,7 @@ name: Github CI
 on: [push, pull_request]
 
 env:
-  MAVEN_OPTS: -Dmaven.repo.local=/home/runner/work/fusion-examples/fusion-examples/.m2 -Dmaven.artifact.threads=256 -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
+  MAVEN_OPTS: -Dmaven.repo.local=/home/runner/work/fusion-examples/fusion-examples/.m2 -Dm2.location=/home/runner/work/fusion-examples/fusion-examples/.m2 -Dmaven.artifact.threads=256 -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
 
 jobs:
   build:
@@ -40,7 +40,7 @@ jobs:
           distribution: 'zulu'
           java-version: '21'
       - name: Build
-        run: mvn install -Dm2.location=/home/runner/work/fusion-examples/fusion-examples/.m2 -e
+        run: mvn install -e
       - name: Remove Snapshots Before Caching
         run: find /home/runner/work/fusion/fusion/.m2 -name '*SNAPSHOT' | xargs rm -Rf
   security_audit:
