--- a/app-deployment/pom.xml
+++ b/app-deployment/pom.xml
@@ -111,6 +111,7 @@
                         </goals>
                         <configuration>
                             <kubeconfig>explicit</kubeconfig>
+                            <httpclientThreads>1</httpclientThreads>
                             <skip>${bundlebee.placeholder-extract.skip}</skip>
                             <descriptions>${project.basedir}/bundlebee/descriptions.properties</descriptions>
                             <outputType>FILE</outputType>
