[build] pre-resolve plugins

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Build
         run: |
           mvn --errors --batch-mode --show-version org.apache.maven.plugins:maven-wrapper-plugin:3.3.1:wrapper "-Dmaven=3.9.6"
-          ./mvnw --errors --batch-mode --show-version install
+          ./mvnw dependency:resolve dependency:resolve-plugins --errors --batch-mode --show-version install
       - name: Remove Snapshots Before Caching
         run: find /home/runner/work/fusion/fusion/.m2 -name '*SNAPSHOT' | xargs rm -Rf
   security_audit:
